<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.AllNews.DetailNewsActivity">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="fill_parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/all_news_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/categoriesSpinner" android:layout_marginTop="24dp"
        app:layout_constraintVertical_bias="0.48000002"
        android:layout_height="0dp" android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/categoriesSpinner"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="10dip"
        android:ems="10"
        android:entries="@array/categories"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:maxLength="120"
        android:paddingStart="21dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text"
        tools:ignore="RtlSymmetry" />

    <Button
        android:text="@string/update"
        android:gravity="center"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        android:background="@drawable/search_image_button"
        android:layout_width="88dp"
        android:layout_height="34dp"
        android:id="@+id/update_button"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/danger_tv" android:layout_marginTop="16dp"
        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/all_news_recycler_view"
        android:layout_marginLeft="8dp" android:visibility="invisible"/>
    <TextView
        android:text="@string/sorry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/danger_tv" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp" android:layout_marginTop="16dp"
        android:textSize="18sp" android:textColor="@color/hint_color"
        android:visibility="invisible" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/all_news_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/no_wifi_button" app:layout_constraintVertical_bias="0.0"
        android:gravity="center"/>
    <TextView
        android:text="@string/vestiru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text" app:layout_constraintStart_toStartOf="@+id/all_news_recycler_view"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="#313131" android:layout_marginStart="19dp"/>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp" app:srcCompat="@drawable/ic_no_internet"
        android:id="@+id/no_wifi_button" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/all_news_recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/all_news_recycler_view"
        app:layout_constraintStart_toStartOf="@+id/all_news_recycler_view"
        android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintVertical_bias="0.462" android:contentDescription="@string/no_internet_connection_image"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>